--- a/_config.yml
+++ b/_config.yml
@@ -64,6 +64,10 @@ content:
         link_text: www.hddisc.com.mx
         sub_title: IT Engineer
         caption: November 2022 - I am currently working for this company
+        quote: >
+          High commitment with the client and the team, using agile methodologies.
+        description: | # this will include new lines to allow paragraphs
+            As an IT engineer, I have the responsibility of communicating with the client for possible incidents in their infrastructure, as well as coordinating with the whole team to provide the best solution for the client.        
 
   - title: Skills # Title for the section
     layout: list # Type of content section (list/text)
@@ -104,6 +108,11 @@ content:
       
       One of my idols is Friedrich Nietzsche,I am very interested in the theories he proposes about the eternal return and in general the theories about the fact that life has no end. 
       Look at this beautiful image!
+      
+      
+      
+      
+      
       ![Trees](/images/landscape-trees.jpg "Trees")
 # Build settings
 remote_theme: sproogen/resume-theme
