--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,8 @@ content:
         #title: Certifications
         quote: Some of my certificacions are
 
-        description: |
+        layout: text
+        content: |
          -Diploma from the Jobs program in English, a 900-hour course by Proulex
          -English by Toefl
          -English by Pearson
