--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ content:
       - layout: top-middle
         #title: Certifications
         quote: Some of my certificacions are
-        content: |
+        description: |
          -Diploma from the Jobs program in English, a 900-hour course by Proulex
          -English by Toefl
          -English by Pearson
