--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,20 @@
 # Site
-repository: isaiasdamian/isaiasdamian
+repository: adrianaMarquez/adrianaMarquez
 favicon: images/favicon.ico
 
 # Content configuration version
 version: 2
 
 # Personal info
-name: Isaias Damian Martinez Rivera
-title: IT Engineer
-email: isaiaschichenol@gmail.com
-website: https://github.com/isaiasdamian
+name: Adriana Guadalupe Marquez De la Paz
+title: Licenciada en Abogacía
+email: delapazlupita20@gmail.com
 
 # Dark Mode (true/false/never)
 darkmode: false
 
 # Social links
-github_username:  isaiasdamian
-linkedin_username: isaias-damian-martinez-rivera-70333021a
+linkedin_username: adriana-márquez-190306191
 
 
 
