--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,11 @@ about_content: | # this will include new lines to allow paragraphs
   formación continua, actualización de conocimientos día con día, excelente colaboración y comunicación con equipos de trabajo, 
   experiencia con múltiples equipos de trabajo de múltiples sectores comerciales de la industria y 4 años de experiencia con servicio al cliente.
 content:
-  - title: Education # Title for the section
+  - title: Educación # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: University of Guadalajara
+        title: Universidad de Guadalajara
         link: github.com/adrianaMarquez
         # link_text: Project Website
         additional_links:
@@ -45,7 +45,7 @@ content:
           .
         description: | # this will include new lines to allow paragraphs
           Este es uno de los mayores logros de mi vida. Titulo profesional de la Licenciatura de abogacía obtenido en Abril del 2023
-  - title: Experience # Title for the section
+  - title: Experiencia # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
@@ -103,7 +103,7 @@ content:
             Despacho laboral realizando actividades relacionadas con amparos desde su elaboración y presentación de este, transcripción de laudos, agendar citas referentes al proceso laboral, atención personalizada al cliente y a los abogados.        
 
 
-  - title: Skills # Title for the section
+  - title: Habilidades # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
@@ -111,7 +111,7 @@ content:
         quote: >
           Mis habilidades más destacables son:
         description: | # this will include new lines to allow paragraphs
-          <mark>Proactiva</mark> , <mark>Liderazgo responsable</mark> , <mark>Comunicación efectiva</mark> , <mark>Sumamente responsable/mark> , <mark>Confidencial</mark>  , <mark>Excelente nivel de ortografía</mark> ,
+           <mark>Proactiva</mark> , <mark>Liderazgo responsable</mark> , <mark>Comunicación efectiva</mark> , <mark>Sumamente responsable</mark> , <mark>Confidencial</mark>  , <mark>Excelente nivel de ortografía</mark> ,
            <mark>Precaución con los detalles</mark> ,  <mark>Minimalista</mark> ,  <mark>Eficiente</mark> ,  <mark>Audaz</mark> , <mark>Manejo de la paquetería Office</mark> ,  <mark>Adaptabilidad al entorno</mark> ,  
            <mark>Honesta</mark> ,  <mark>Con optimas practicas en la seguridad informática</mark>.
   - title: Certificaciones
@@ -121,13 +121,19 @@ content:
         #title: Certifications
         quote: Algunos de mis certificados son
         description: |
-         -Diploma from the Jobs program in English, a 900-hour course by Proulex
+         
          -Constancia: en el apoyo logístico, en la conferencia titulada “EL SISTEMA NACIONAL ANTICORRUPCION PARA SERVIDORES PUBLICOS FEDERALES Y ESTATALES” 
+         
          -Constancia: en el apoyo logístico, en la conferencia titulada “EL FEDERALISMO ADMINISTRATIVO EN MEXICO”   
+        
          -Constancia: por participación en el proyecto de “SEGURIDAD CIUDADANA”
+         
          -Constancia: por participación en el “1ER. CONGRESO DE RESPONSABILIDAD MEDICA UTEG”
+         
          -Constancia: por participación en las Jornadas Académicas, Jurídicas denominadas “AMPARO Y DERECHOS HUMANOS”
+         
          -Constancia: por participación en el programa “CONOCE TU CONGRESO”
+         
          -Certificado: por participación del “COMITÉ ORGANIZADO DEL IV FORO ANALITICO Y PROPOSITIVO ACERCA DE LA JUSTICIA EN MEXICO
 
 # Build settings
