--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ linkedin_username: adriana-márquez-190306191
 
 # About Section
 about_title: Resumen profesional
-about_profile_image: images/profile.jpg
+about_profile_image: images/adriana.jpg
 about_content: | # this will include new lines to allow paragraphs
   Licenciada titulada de la Universidad de Guadalajara, con conocimientos en las diferentes <mark>áreas de la abogacía (Laboral, administrativa, civil, familiar, penal)</mark>
   capaz de liderar equipos, habilidades de efectivas de comunicación, capacidad de resolución de problemas de conflictos, capacidad de adaptación a las nuevas tecnologías,
