--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title: Licenciada en Abogacía
 email: delapazlupita20@gmail.com
 
 # Dark Mode (true/false/never)
-darkmode: false
+darkmode: true
 
 # Social links
 linkedin_username: adriana-márquez-190306191
