--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ linkedin_username: adriana-márquez-190306191
 about_title: Resumen profesional
 about_profile_image: images/adriana.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Licenciada titulada de la Universidad de Guadalajara, con conocimientos en las diferentes <mark>áreas de la abogacía (Laboral, administrativa, civil, familiar, penal)</mark>
+  Licenciada titulada de la Universidad de Guadalajara, con conocimientos en las diferentes <mark>áreas de la abogacía (Amparo, Laboral, Administrativa, Civil, Familiar, Penal)</mark>
   capaz de liderar equipos, habilidades de efectivas de comunicación, capacidad de resolución de problemas de conflictos, capacidad de adaptación a las nuevas tecnologías,
   formación continua, actualización de conocimientos día con día, excelente colaboración y comunicación con equipos de trabajo, 
   experiencia con múltiples equipos de trabajo de múltiples sectores comerciales de la industria y 4 años de experiencia con servicio al cliente.
