--- a/_config.yml
+++ b/_config.yml
@@ -102,12 +102,21 @@ content:
         description: | # this will include new lines to allow paragraphs
             Despacho laboral realizando actividades relacionadas con amparos desde su elaboración y presentación de este, transcripción de laudos, agendar citas referentes al proceso laboral, atención personalizada al cliente y a los abogados.        
 
+      - layout: left
+        title: Despacho Morelos & Aldana
+        sub_title: Abogada
+        caption: Actualmente laboro en esta empresa
+        quote: >
+          Despacho Morelos & Aldana especializados en materia penal, laboral, compliance, seguridad empresarial, cadena de suministros, manejo de crisis, enlace Institucional, anti-fraude, anti-corrupción y responsabilidad penal corporativa.
+        description: | # this will include new lines to allow paragraphs
+            Despacho Morelos & Aldana realizando actividades de elaborar demandas, denuncias, requerimientos, promociones, brindando atención a los servidores publicos y privados. Customer compliance.
+
 
   - title: Habilidades # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: Everyone has skills, but not everyone takes advantage of them.
+        title: Todos tenemos habilidades pero no todos sacamos ventaja de ellas.
         quote: >
           Mis habilidades más destacables son:
         description: | # this will include new lines to allow paragraphs
