--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ content:
         quote: >
           Meritoria en el Centro de Justicia para las Mujeres
         description: | # this will include new lines to allow paragraphs
-            Laborando con una auxiliar del ministerio público en el área de Dignidad de las personas amenazas.         
+            Laborando como auxiliar del agente del ministerio publico en el área de dignidad para las personas, amenazas, ciber delitos y difamaciones.        
     
       - layout: left
         title: BBVA
