--- a/_config.yml
+++ b/_config.yml
@@ -98,9 +98,9 @@ content:
         sub_title: Abogada
         caption: Duración 1 AÑO
         quote: >
-          Despacho laboral realizando actividades relacionadas con amparos desde su elaboración 
+          Despacho enfocado en materia Laboral. 
         description: | # this will include new lines to allow paragraphs
-            Despacho laboral realizando actividades relacionadas con amparos desde su elaboración y presentación de este, transcripción de laudos, agendar citas referentes al proceso laboral, atención personalizada al cliente y a los abogados.        
+            Despacho Laboral realizando actividades relacionadas con amparos desde su elaboración y presentación de este, transcripción de laudos, agendar citas referentes al proceso laboral, atención personalizada al cliente y a los abogados.        
 
       - layout: left
         title: Despacho Morelos & Aldana
