--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ content:
         quote: >
           Despacho Morelos & Aldana especializados en materia penal, laboral, compliance, seguridad empresarial, cadena de suministros, manejo de crisis, enlace Institucional, anti-fraude, anti-corrupción y responsabilidad penal corporativa.
         description: | # this will include new lines to allow paragraphs
-            Despacho Morelos & Aldana realizando actividades de elaborar demandas, denuncias, requerimientos, promociones, brindando atención a los servidores publicos y privados. Customer compliance.
+            Despacho Morelos & Aldana realizando actividades en elaborar demandas, denuncias, requerimientos, promociones, brindando atención a los servidores publicos y privados. Customer compliance.
 
 
   - title: Habilidades # Title for the section
